# tzap

./: API.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: zobrist_rng.rs
qasm/: adder_8.qasm  barenco_tof_10.qasm  barenco_tof_3.qasm  barenco_tof_4.qasm  barenco_tof_5.qasm  csla_mux_3.qasm  csum_mux_9.qasm  cycle_17_3.qasm  gf2^10_mult.qasm  gf2^128_mult.qasm  gf2^16_mult.qasm  gf2^32_mult.qasm  gf2^4_mult.qasm  gf2^5_mult.qasm  gf2^64_mult.qasm  gf2^6_mult.qasm  gf2^7_mult.qasm  gf2^8_mult.qasm  gf2^9_mult.qasm  grover_5.qasm  ham15-high.qasm  ham15-low.qasm  ham15-med.qasm  hwb10.qasm  hwb11.qasm  hwb6.qasm  hwb8.qasm  mod5_4.qasm  mod5_4_dec.qasm  mod5_4_wisq.qasm  mod_adder_1024.qasm  mod_adder_1048576.qasm  mod_mult_55.qasm  mod_red_21.qasm  qcla_adder_10.qasm  qcla_com_7.qasm  qcla_mod_7.qasm  rc_adder_6.qasm  test.qasm  tof_10.qasm  (+5 more)
scripts/: batch_pyzx.py  compare.py  make_qft.py  plot_comparison.py
src/: bench.rs  cancel.rs  circuit.rs  decompose.rs  decompose_rz.rs  experimental.rs  lib.rs  main.rs  pass.rs  phase_fold_global.rs  phase_fold_global_expr.rs  phase_fold_local.rs  qasm.rs  rule.rs  unitary.rs
tests/: cli.rs
